@@ -83,7 +83,7 @@
                     sl python:plone_view.have_portlets('plone.leftcolumn', view);
                     sr python:plone_view.have_portlets('plone.rightcolumn', view);
                     template_id python:plone_view.bodyClass(template, view);
-                    class_expr string:${context/getSectionFromURL} template-${template_id};"
+                    class_expr string:${plone_view/getSectionFromURL} template-${template_id};"
         tal:attributes="class python:class_expr.strip();
                         dir python:test(isRTL, 'rtl', 'ltr')">
     <div id="visual-portal-wrapper">
